# learn-ogl

./: .gitignore  Makefile  Makefile.am  Makefile.old  autogen.sh  colored.cpp  configure.ac  cube.cpp  extern.h  fshader_btext.tux  fshader_cube.tux  fshader_simple.tux  gltest.cpp  moving_triangle.cpp  shader.cpp  shader.h  texture_basic.cpp  triangle.cpp  uniform.cpp  utils.cpp  utils.h  vshader_btext.tux  vshader_cube.tux  vshader_simple.tux
hdr/: extern.h  utils.h
shaders/: fshader_color_cube.tux  fshader_cube.tux  fshader_lamp.tux  vshader_btext.tux  vshader_color_cube.tux  vshader_lamp.tux
src/: Makefile.am  colored.cpp  cube.cpp  gltest.cpp  lights.cpp  texture_basic.cpp  triangle.cpp  uniform.cpp  utils.cpp
